--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,13 +3,13 @@
 
 Vagrant.configure("2") do |config|
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "centraide-campagne-en-ligne-box"
+  config.vm.box = "precise64"
 
-  config.vm.box_url = "http://files.vagrantup.com/precise32.box"
+  config.vm.box_url = "http://files.vagrantup.com/precise64.box"
 
   config.vm.network :forwarded_port, guest: 80, host: 8080
   # config.vm.synced_folder "../code", "/vagrant/www-integration"
-  config.vm.synced_folder "../src", "/vagrant/www"
+  config.vm.synced_folder "../src", "/var/www"
 
   config.vm.synced_folder "files/etc", "/etc/puppet"
 
