--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vagrant/puppet/modules/composer"]
 	path = vagrant/puppet/modules/composer
 	url = git@github.com:experience/vagrant-puppet-composer.git
+[submodule "vagrant/puppet/modules/puppetlabs-mysql"]
+	path = vagrant/puppet/modules/puppetlabs-mysql
+	url = git@github.com:puppetlabs/puppetlabs-mysql.git
