--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,9 @@
 [submodule "vagrant/puppet/modules/composer"]
 	path = vagrant/puppet/modules/composer
 	url = git@github.com:experience/vagrant-puppet-composer.git
-[submodule "vagrant/puppet/modules/puppetlabs-mysql"]
-	path = vagrant/puppet/modules/puppetlabs-mysql
-	url = git@github.com:puppetlabs/puppetlabs-mysql.git
+[submodule "vagrant/puppet/modules/puppet-mysql"]
+	path = vagrant/puppet/modules/puppet-mysql
+	url = git@github.com:camptocamp/puppet-mysql.git
+[submodule "vagrant/puppet/modules/puppet-augeas"]
+	path = vagrant/puppet/modules/puppet-augeas
+	url = git@github.com:camptocamp/puppet-augeas.git
